@@ -7,7 +7,9 @@ libdatetime_la_SOURCES = 			\
 	datetime.h				\
 	datetime.c				\
 	datetime-dialog.h			\
-	datetime-dialog.c
+	datetime-dialog.c			\
+	xfce46-compat.h				\
+	xfce46-compat.c
 
 libdatetime_la_CFLAGS = 			\
 	-I$(top_srcdir)				\
